# ml-knowledge-base

./: .buildinfo  .gitignore  Pipfile  conf.py  genindex.html  index.html  index.md  objects.inv  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-sphinx.yml  main.yml
01-intro/: boxplot.md  definitions.html  definitions.md  index.html  index.md  ml-basics.md  ml-workflow.md  stats-basics.md
01-intro/math-basics/: index.html  index.md
01-intro/ml-basics/: index.html  ml-workflow.html  types-ml.html  types-ml.md
01-intro/stats-basics/: boxplot.html  index.html  index.md  outliers.html  (+1 more)
02-data-preparation/: correlations.html  data-validation.html  dataset-quality.html  feature-selection.html  feature-selection.md  index.html  index.md  mol-descriptors-morgan.md  molecular-descriptors.md  scaling.html  scaling.md  train-test-sets.html
03-ml-models/: decision-tree.html  decision-tree.md  gradient-boosting.html  gradient-boosting.md  hyperparameters-gbm.html  hyperparameters-gbm.md  index.html  index.md  linear-models.md  ml-models.html  nearest-neighbors.html  nearest-neighbors.md
04-model-evaluation/: cross-validation.html  index.html  index.md  metrics.html  metrics.md  model-evaluation.html  partial-dependance-plots.html  shapley-additice-explanations.html  y-randomization.html
05-resources/: index.md  python-packages.md
05-sklearn/: index.html  index.md  pipelines.html  saving-models.html
06-resources/: articles.html  index.md  python-packages.html  scientific-papers.html  scientific-papers.md
(+50 files in other folders)
